* fix bug introduced by last commit - messages now aligned to justify like they should be

--- a/static/webcit.css
+++ b/static/webcit.css
@@ -519,7 +519,9 @@ body, #global {
 #iconbar, #banner, #content, #message_list_hdr, #message_list, #preview_pane  {
 	text-align: left;
 }
-
+.message_content > div > div {
+    text-align: justify !important;
+}
 #iconbar {
 	position: absolute;
 	top: 0;
